@@ -9,12 +9,14 @@ module Bellows
 
     desc "sync PROJECT", "Create tests & update refspecs for active reviews."
     method_options :test => :boolean
+    method_options :all => :boolean
     def sync(project)
       if not ['nova', 'glance', 'keystone'].include?(project) then
         puts "ERROR: Please specify a valid project name."
         exit 1
       end
       test = options[:test]
+      all = options[:all]
       smoke_tests = Bellows::SmokeStack.get_smoke_tests(project)
       configs=Util.load_configs
       test_suite_ids = configs['test_suite_ids'].collect {|x| x.to_s }
@@ -33,7 +35,10 @@ module Bellows
           if smoke_test["#{project}_package_builder"]['branch'] != refspec then
             puts "Updating... " + desc
             puts "refspec: " + refspec
-            Bellows::SmokeStack.update_smoke_test(smoke_test['id'], {"#{project}_package_builder" => { "branch" => refspec}, "description" => desc, "status" => "Updated"}) if not test
+            Bellows::SmokeStack.update_smoke_test(smoke_test['id'], {"#{project}_package_builder" => { "branch" => refspec}, "description" => desc, "status" => "Updated", "test_suite_ids" => test_suite_ids, "config_template_ids" => config_template_ids}) if not test
+          elsif all then
+            puts "Updating (all)... " + desc
+            Bellows::SmokeStack.update_smoke_test(smoke_test['id'], {"#{project}_package_builder" => { "branch" => refspec}, "description" => desc, "test_suite_ids" => test_suite_ids, "config_template_ids" => config_template_ids}) if not test
           end
         end
       end
@@ -58,28 +63,6 @@ module Bellows
         if smoke_test
           puts "Deleting... " + desc
           Bellows::HTTP.delete("/smoke_tests/#{smoke_test['id']}") if not test
-        end
-      end
-    end
-
-    desc "reconfig PROJECT", "Reconfigure test suite and configuration selections."
-    def reconfig(project)
-      if not ['nova', 'glance', 'keystone'].include?(project) then
-        puts "ERROR: Please specify a valid project name."
-        exit 1
-      end
-      test = options[:test]
-      smoke_tests = Bellows::SmokeStack.get_smoke_tests(project)
-      configs=Util.load_configs
-      test_suite_ids = configs['test_suite_ids'].collect {|x| x.to_s }
-      config_template_ids = configs['config_template_ids'].collect {|x| x.to_s }
-      Bellows::Gerrit.reviews(project) do |review|
-        refspec = review['currentPatchSet']['ref']
-        review_id = Bellows::Util.short_spec(refspec)
-        smoke_test = smoke_tests[review_id]
-        desc = review['owner']['name'] + ": " +review['subject']
-        if smoke_test
-          Bellows::SmokeStack.update_smoke_test(smoke_test['id'], {"test_suite_ids" => test_suite_ids, "config_template_ids" => config_template_ids, "description" => desc})
         end
       end
     end
